--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
+    "chartjs-plugin-doughnutlabel-rebourne": "^3.0.0-beta.4",
     "core-js": "^3.8.3",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^3.5.3",
     "vueperslides": "^2.15.3",
     "vuetify": "^2.6.0",
